# crosschain-1inch

./: CLAUDE.md  Readme.md  package-lock.json  package.json  planner.md  tailwind.config.js
.kiro/specs/frontend-wallet-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/fusion-resolver-liquidity/: design.md  requirements.md  tasks.md
app/: layout.tsx  page.tsx
components/: FusionSwap.tsx  WalletConnect.tsx  providers.tsx
components/ui/: badge.tsx
contracts/escrow/sources/: cross_chain_escrow.move
contracts/ethereum/: README.md  hardhat.config.ts  package-lock.json  package.json
contracts/ethereum/contracts/: HTLC.sol  MockERC20.sol
contracts/ethereum/ignition/modules/: Lock.ts
contracts/ethereum/scripts/: deploy.ts  interact.ts
contracts/ethereum/test/: HTLC.test.ts  Lock.ts
contracts/fusion-resolver/: fund-stellar-account.js  generate-stellar-keypair.js  package-lock.json  package.json
contracts/fusion-resolver/src/: index.ts
contracts/fusion-resolver/src/api/: route.ts
contracts/fusion-resolver/src/core/: AssetManager.ts  BalanceTracker.ts  DutchAuction.ts  HTLCManager.ts  OrderBook.ts  (+3 more)
contracts/relayer/: README.md  RUN_INSTRUCTIONS.md  package-lock.json  package.json  start-dev.js  test-build.js  test-config.js  test-stellar-connection.js  tsconfig.json
contracts/relayer/scripts/: fund-stellar-account.js  manual-fund-stellar.js  setup.js  test-api.js
contracts/relayer/src/: index.ts
contracts/stellar/stellar-htlc/: Cargo.toml
contracts/stellar/stellar-htlc/contracts/htlc/: Cargo.toml  Makefile  README.md
contracts/stellar/stellar-htlc/contracts/htlc/src/: lib.rs  test.rs
contracts/stellar/stellar-htlc/contracts/htlc/test_snapshots/test/: contract_exists_flag.1.json  contract_id_unique.1.json  refund_before_timelock.1.json  refund_success.1.json  withdraw_after_timelock.1.json  withdraw_success.1.json
hooks/: useWallets.ts
types/: window.d.ts
(+19 files in other folders)
