[package]
name = "stellar-htlc"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
authors = ["CrossChain 1inch Team"]
description = "Production-ready Stellar Soroban HTLC contract for cross-chain atomic swaps"
license = "MIT"
repository = "https://github.com/crosschain-1inch/stellar-htlc"
keywords = ["stellar", "soroban", "htlc", "atomic-swap", "cross-chain"]
categories = ["cryptography", "blockchain"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true